--- a/portfolio-site/src/Components/Introduction/Introduction.css
+++ b/portfolio-site/src/Components/Introduction/Introduction.css
@@ -3,7 +3,7 @@
     justify-content: center;
     background-color: #1b1d1f;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: relative;
 }
 
