--- a/portfolio-site/src/Components/Projects/Projects.css
+++ b/portfolio-site/src/Components/Projects/Projects.css
@@ -1,8 +1,7 @@
 #Projects-Main{
     background-color: #031620;
     background-image: url("../../../public/images/codeBackground.jpg");
-    width: 100vw;
-    
+    width: 100%;
     
 }
 
